--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     /*font-family: 'Poppins', sans-serif;*/
     font-family: 'Playfair Display', serif;
@@ -33,13 +37,13 @@ a:hover {
 
 .carousel {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     overflow: auto;
     white-space:nowrap;
 }
 
 .gallery {
-    height: 70vh;
+    height: 60vh;
     width: auto;
     display: inline-block;
     margin: auto;
@@ -47,4 +51,8 @@ a:hover {
 
 .contact {
     font-size: medium;
+}
+
+#outer {
+    overflow: auto;
 }
